# pHash

./: config.h.in  configure  configure.ac
bindings/java/: pHash-jni.cpp  pHash-jni.h
bindings/java/org/pHash/: ImageFormatException.java  MHImageHash.java  pHash.java
examples/: Makefile.am  test_dctvideohash.cpp
src/: Makefile.am  cimgffmpeg.cpp  pHash.cpp
